# jus-brasil-challenge

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: desafio-backend.md
jus_brasil/: __init__.py  config.py
jus_brasil/api/: health.py  query.py
jus_brasil/crawlers/: __init__.py  cpopg.py  cposg.py  models.py  parsing.py  utils.py
jus_brasil/crawlers/tjsp/cpopg/: crawler.py  parsing.py
jus_brasil/esaj/tjsp/: download.py
jus_brasil/esaj/tjsp/cpopg/: parsing.py
tests/: conftest.py
tests/fixtures/: __init__.py  fixture_tjms_pg.py  fixture_tjsp_pg.py  fixture_tjsp_sg.py  tjsp-first-jurisdiction.html  tjsp-second-appeal-jurisdiction.html  tjsp-second-jurisdiction.html
tests/integration/crawlers/: test_download.py  test_utils.py
tests/integration/esaj/tjsp/: test_download.py
tests/unit/crawlers/: test_cpopg.py  test_download.py  test_parsing.py  test_utils.py
tests/unit/crawlers/tjsp/cpopg/: test_parsing.py
tests/unit/esaj/tjsp/: test_download.py  test_parsing.py
tests/unit/esaj/tjsp/cpopg/: test_parsing.py
