[tool.poetry]
name = "jus-brasil"
version = "0.0.1"
description = ""
authors = ["Alexandre <0x41e@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.22.0"
ujson = "^1.35"
uvicorn = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-cov = {version = "^2.7",allows-prereleases = true}
pytest-sugar = {version = "^0.9.2",allows-prereleases = true}
flake8 = {version = "^3.7",allows-prereleases = true}
mypy = {version = "^0.701.0",allows-prereleases = true}
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pre-commit = {version = "^1.16",allows-prereleases = true}
pytest-watch = {version = "^4.2",allows-prereleases = true}
flake8-mypy = {version = "^17.8",allows-prereleases = true}
pytest-asyncio = "^0.10.0"
hypothesis = "^4.23"
pytest-mock = "^1.10"
responses = "^0.10.6"
aresponses = "^1.1"

[tool.black]
# Considering it can
line-length = 90
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures/*.py
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
